--- a/Sunduk.PWA/Components/Stuff/ArcsComponent.razor
+++ b/Sunduk.PWA/Components/Stuff/ArcsComponent.razor
@@ -1,7 +1,7 @@
 ﻿<MudSwipeArea OnSwipe="@OnSwipe">
     <MudTabs Elevation="2" @ref="tabs" Style="font-size: small">
         <MudTabPanel Text="Скругление">
-            <ThreadTurningComponent />
+            <RadiusComponent />
         </MudTabPanel>
         <MudTabPanel Text="@("\"Ниппель\"")">
             <NippleComponent />
